tests/ui/ast_statement_from_rule.stderr
error[E0505]: cannot move out of `rule` because it is borrowed
  --> $DIR/ast_statement_from_rule.rs:12:10
   |
11 |     let stmt = rule.ast_statement();
   |                ---- borrow of `rule` occurs here
12 |     drop(rule);
   |          ^^^^ move out of `rule` occurs here
13 |     let _end = stmt;
   |                ---- borrow later used here

For more information about this error, try `rustc --explain E0505`.
